--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,25 @@
 {
 	"extends": [
 		"eslint:recommend",
+		"plugin:import/errors",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:@typescript-eslint/recommended",
 		"prettier"
 	],
-	"plugins": [],
+	"rules": {
+		"react/prop-types": 0,
+		"react/react-in-jsx-scope": 0,
+		"@typescript-eslint/no-empty-function": 0
+	},
+	"plugins": [
+		"react",
+		"import",
+		"jsx-a11y",
+		"@typescript-eslint"
+	],
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaVersion": 2022,
 		"sourceType": "module",
