--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "trend",
+  "name": "principle",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "source": "src/index.html",
+  
   "scripts": {
     "dev": "parcel src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
-    "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet"
+    "check": "prettier --check \"**/**/*.{html,ts,tsx}\"",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet",
+    "typecheck": "tsc --noEmit",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Phillip Sturgeon<sturgeonphillip@protonmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.0",
@@ -27,7 +29,9 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "parcel": "^2.4.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   },
   "dependencies": {
