--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
 	"extends": [
-		"eslint:recommend",
+		"eslint:recommended",
 		"plugin:import/errors",
     "plugin:react/recommended",
     "plugin:jsx-a11y/recommended",
