--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "principle",
   "version": "1.0.0",
   "description": "",
-  
   "scripts": {
     "dev": "parcel src/index.html",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
@@ -16,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@types/express": "^4.17.13",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
@@ -35,6 +35,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
